Add services we do content.

--- a/services.html
+++ b/services.html
@@ -95,7 +95,7 @@
     </div>
 
     <!-- exterior paint solutions -->
-    <div class="container white-bg white-corner-border">
+    <div class="container white-bg white-corner-border flex-container">
       <div class="col30">
         <img src="http://www.parispaintingstudio.com/uploads/1/0/8/8/108810317/edited/paris-painting-home2_1.png" style="width: 80%;">
       </div>
@@ -110,7 +110,7 @@
     <br><br>
 
     <!-- interior paint solutions -->
-    <div class="container white-bg white-corner-border">
+    <div class="container white-bg white-corner-border flex-container">
       <div class="col30">
         <img src="http://www.parispaintingstudio.com/uploads/1/0/8/8/108810317/bedroom-painting-paris-painting-slide-5_2_orig.png" style="width: 80%;">
       </div>
@@ -125,7 +125,7 @@
     <br><br>
 
     <!-- custom finishing / cabinets / etc. -->
-    <div class="container white-bg white-corner-border">
+    <div class="container white-bg white-corner-border flex-container">
       <div class="col30">
         <img src="http://www.parispaintingstudio.com/uploads/1/0/8/8/108810317/kitchen-painting-paris-painting-slide-3_orig.png" style="width: 80%;">
       </div>
@@ -140,14 +140,29 @@
     <br><br>
 
     <!-- epoxy floors -->
-    <div class="container white-bg white-corner-border">
+    <div class="container white-bg white-corner-border flex-container">
       <div class="col30">
         <img src="https://c.pxhere.com/images/a2/83/bc54a26db18473585e1a5860858e-1590327.jpg!d" style="width: 80%;">
       </div>
       <div class="floating_box_60 white-bg-trans">
-        <h2><em>EPOXY FLOOR Finishes</h2>
+        <h2><em>EPOXY FLOOR Finishes</em></h2>
         <br>
         <h4>For garages, commercial buildings, or just for a unique look in your home, epoxy floors look sleek and are easy to clean. Just another one of the excellent services we offer!</h4>
+        <div class="clear"></div>
+      </div>
+      <div class="clear"></div>
+    </div>
+    <br><br>
+
+    <!-- staging to sell -->
+    <div class="container white-bg white-corner-border flex-container">
+      <div class="col30">
+        <img src="http://www.parispaintingstudio.com/uploads/1/0/8/8/108810317/paris-painting-bedroom-2_1.jpg" style="width: 80%;">
+      </div>
+      <div class="floating_box_60 white-bg-trans">
+        <h2><em>STAGING to Sell</em></h2>
+        <br>
+        <h4>Looking to sell? Complement your beautiful paint with professionally staged decor perfect for sealing the deal with prospective buyers.</h4>
         <div class="clear"></div>
       </div>
       <div class="clear"></div>
@@ -157,27 +172,37 @@
   </section>
 
   <section>
-  <!-- video and testimonials -->
+  <!-- our process -->
   <div id="first" class="white-bg pad-reg">
-    <div class="container">
-      <center><h2><em>See why the Valley recommends Paris Painting Studio</em></h2></center><br>
-      <center><h4>Timely Services. Professional Results. Big Smiles.</h4></center>
-      <br><br>
-      <div class="flex-col50 light-bg">
-      <div class="testimonials">
-          <h3>Kind Words from Happy Clients</h3>
-          <br>
-          <h4 class="testimonial-bg">We recently used Paris Painting, LLC to paint the exterior of our home. Their proposal was adhered to and all work was done to our satisfaction. We were very impressed with the crew; felt in good hand from beginning to end.</h4>
-          <h4><em>-Dennis K.</em><br><span class="gold-text">*****</span></h4>
-          <br>
-          <h4 class="testimonial-bg">Jules will always be our go-to painter for both interior and exterior paint projects. Not only is she extremely professional, she is on time, is eager to help and give advice when it comes to choosing paint colors.</h4>
-          <h4><em>-Nini &amp; Pat Chorpenning, Sr.</em><br><span class="gold-text">*****</span></h4>
+    <div class="container box-grid">
+      <center><h2>Here to Help the Entire Way</h2></center>
+      <br>
+      <div class="flex-container justify-space-btwn">
+        <div class="col30 light-bg round-border white-corner-border pad-sm">
+          <h2 class="cursive">Meet &#39;n Greet</h2>
+          <h4 class="light-blue-bg">Arrive on-time for your estimate.</h4>
+          <h4>Talk about your options.</h4>
+          <h4 class="light-blue-bg">Give recommendations.</h4>
+          <h4>Provide comprehensive quote.</h4>
+          <h4 class="light-blue-bg">Schedule your project.</h4>
+          <h4>Collect security deposit.</h4>
+        </div>
+        <div class="col30 light-bg round-border white-corner-border pad-sm">
+          <h2 class="cursive">Prep &#39;n Paint</h2>
+          <h4 class="light-blue-bg">Address any changes due to weather.</h4>
+          <h4>Prep Work &amp; Pressure Washing.</h4>
+          <h4 class="light-blue-bg">Work until we&#39;re done.</h4>
+          <h4>Communicate your project&#39;s status.</h4>
+          <h4 class="light-blue-bg">
+        </div>
+        <div class="col30 light-bg round-border white-corner-border pad-sm">
+          <h2 class="cursive">Clean &#39;n Go</h2>
+          <h4 class="light-blue-bg">Go over final touches.</h4>
+          <h4>Replace any moved furniture.</h4>
+          <h4 class="light-blue-bg">Ensure your utmost satisfaction.</h4>
+          <h4>Leave you a happy customer!</h4>
+        </div>
       </div>
-      <div class="video">
-        <iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/ATSgwZXOuUo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
-      </div>
-      <div class="clear"></div>
     </div>
   </div>
   </section>
@@ -228,7 +253,7 @@
   <footer>
   <div id="footer" class="blue-bg pad-reg white_text">
     <div class="container flex-container justify-space-btwn">
-      <div class="col30">
+      <div class="col33">
         <h2>Always available to chat.</h2>
         <h3 class="white_text">Contact us today to discuss your painting needs!</h3>
         <br><br>
@@ -238,12 +263,12 @@
         <br>
         <a href="#" class="social-media"><img src="img/fb.png"></a> &nbsp; <a href="#" class="social-media"><img src="img/ig.png"></a>
       </div>
-      <div class="col30">
+      <div class="col33">
         <input type="text" name="name" class="contact" placeholder="Name">
         <input type="email" name="email" class="contact" placeholder="Email">
         <input type="tel" name="telephone" class="contact" placeholder="Phone">
       </div>
-      <div class="col30">
+      <div class="col33">
         <textarea class="contact" name="message" placeholder="Message" rows="5"></textarea>
         <button type="submit" class="button-submit contact">Send Message</button>
       </div>
