Adjust spotlight class.

--- a/services.html
+++ b/services.html
@@ -47,7 +47,7 @@
 
   <!-- spotlight -->
   <div id="small_spotlight_bg_container">
-    <div id="small_spotlight_bg">
+    <div id="small_spotlight_bg" class="services">
       <div class="container">
         <h1>Our Services</h1>
       </div>
